# lsiwh3724922food

./: .firebaserc  @  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: .index.html.swp  food.html  index.html  main.py
src/lsiwh3724922food/: .main.py.swp  main.py
src/lsiwh3724922food/code/data/: food.csv
