[project]
name = "lsiwh3724922food"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
