[project]
name = "lsiwh3724922food"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "pandas>=2.2.2",
    "PyMySQL>=1.1.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
food = "lsiwh3724922food.main:food"
